--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,8 +14,9 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   uuid: ^3.0.6
-  google_fonts: ^6.2.1
-  http: ^1.2.1
+  google_fonts: ^3.0.1
+  http: ^0.13.3
+  http_interceptor: ^1.0.2
 
 dev_dependencies:
   flutter_test:
